--- a/examples/docker-compose/docker-compose.yml
+++ b/examples/docker-compose/docker-compose.yml
@@ -1,6 +1,5 @@
-version: '3'
-services:  
-
+version: "3"
+services:
   db:
     image: postgres:12
     volumes:
@@ -11,14 +10,14 @@ services:
       - POSTGRES_DB=test
 
   pgbouncer:
-    image: edoburu/pgbouncer
+    image: ghcr.io/whtsky/pgbouncer
     environment:
-       - DB_USER=dbuser
-       - DB_PASSWORD=hbZkzny5xrvVH
-       - DB_HOST=db
-       - DB_NAME=test 
-       - POOL_MODE=transaction
-       - ADMIN_USERS=postgres,dbuser
+      - DB_USER=dbuser
+      - DB_PASSWORD=hbZkzny5xrvVH
+      - DB_HOST=db
+      - DB_NAME=test
+      - POOL_MODE=transaction
+      - ADMIN_USERS=postgres,dbuser
     ports:
       - "5432:5432"
     depends_on:
