--- a/examples/kubernetes/multiuser/deployment.yml
+++ b/examples/kubernetes/multiuser/deployment.yml
@@ -6,10 +6,10 @@ metadata:
   labels:
     app: pgbouncer-example
 spec:
-  revisionHistoryLimit: 10  # removes old replicasets for deployment rollbacks
+  revisionHistoryLimit: 10 # removes old replicasets for deployment rollbacks
   strategy:
     rollingUpdate:
-      maxUnavailable: 0  # Avoid Terminating and ContainerCreating at the same time
+      maxUnavailable: 0 # Avoid Terminating and ContainerCreating at the same time
   selector:
     matchLabels:
       app: pgbouncer-example
@@ -23,14 +23,14 @@ spec:
       #  purpose: apps
       containers:
         - name: pgbouncer
-          image: edoburu/pgbouncer:1.9.0
+          image: ghcr.io/whtsky/pgbouncer:1.9.0
           #imagePullPolicy: Always
           ports:
             - containerPort: 5432
           volumeMounts:
             - name: configfiles
               mountPath: "/etc/pgbouncer"
-              readOnly: true  # writes update the secret!
+              readOnly: true # writes update the secret!
           livenessProbe:
             tcpSocket:
               port: 5432
@@ -39,11 +39,12 @@ spec:
             preStop:
               exec:
                 # Allow existing queries clients to complete within 120 seconds
-                command: ["/bin/sh", "-c", "killall -INT pgbouncer && sleep 120"]
+                command:
+                  ["/bin/sh", "-c", "killall -INT pgbouncer && sleep 120"]
           securityContext:
             allowPrivilegeEscalation: false
             capabilities:
-              drop: ['all']
+              drop: ["all"]
       volumes:
         - name: configfiles
           secret:
